<resources>

    <string name="app_name">Fun Number Game</string>
    <string name="main_title">Addition Number Game</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_play">Play Game</string>
    <string name="button_new">New Game</string>
    <string name="button_exit">Exit</string>
    <string name="button_AnswerOne">One</string>
    <string name="button_AnswerTwo">Two</string>
    <string name="button_AnswerThree">3</string>
    <string name="button_AnswerFour">Four</string>
    <string name="button_YourScore">YourScore</string>
        
   <string name="answer_correct">Your answer is correct!</string>
   <string name="answer_wrong">Your answer is wrong!</string>
   <string name="next_question">Next Question</string>
   <string name="main_menu">Main Menu</string>
   <string name="answer_yourscore">Your score is </string>  
    
    
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world1">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>

   <string name="settings_label">Settings...</string>
   <string name="settings_title">Sudoku settings</string>
   <string name="settings_shortcut">s</string>
   <string name="music_title">Music</string>
   <string name="music_summary">Play background music</string>
   <string name="hints_title">Hints</string>
   <string name="hints_summary">Show hints during play</string>

   <string name="new_game_title">Difficulty</string>
   <string name="easy_label">Easy</string>
   <string name="medium_label">Medium</string>
   <string name="hard_label">Hard</string>

   <string name="game_title">Game</string>
   <string name="no_moves_label">No moves</string>
   <string name="keypad_title">Keypad</string>
   
   <string name="about_title">About Android Sudoku</string>
   <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.
</string>
</resources>